--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ body {
   margin-left: 30px;
   font-family: sans-serif;
   font-size: 12px;
-  background-image: url('images/beach.jpg');
+  background-image: url('../images/beach.jpg');
 }
 
 .container {
