added new links

--- a/style/style.css
+++ b/style/style.css
@@ -39,13 +39,28 @@ a:hover {
   color: #40b4e5;
 }
 
+img.yt {
+  vertical-align: middle;
+  height: 16px;
+  width: 16px;
+}
+
+img.gfg {
+  vertical-align: middle;
+  height: 16px;
+  width: 16px;
+  background-color: #008000;
+}
+
 /* Table style - start */
+
 table {
   border: 1px solid #ddd5d5;
   border-collapse: collapse;
   margin: 0;
   width: 80%;
   font-size: 12px;
+  margin-bottom: 15px;
 }
 
 thead {
@@ -70,4 +85,5 @@ td:nth-child(2) {
 ol {
   padding-left: 10px;
 }
+
 /* end */
